--- a/Alberto-watch.html
+++ b/Alberto-watch.html
@@ -66,11 +66,11 @@
             background: var(--dark-color);
             padding: 1rem 0;
             margin-top: 78px;
-            top: 0;
+            /*top: 0;
              z-index: 1000; 
              position: fixed;
             padding-left: 10px;
-            width: 100%;
+            width: 100%;*/
         }
 
         .nav-container {
@@ -379,6 +379,7 @@
             .nav-container {
                 flex-direction: column;
                 align-items: center;
+                
             }
             
             .nav-item {
